--- a/flexbox/colored-grid.html
+++ b/flexbox/colored-grid.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Colored Grid</title>
   <style>
     .row {
       width: 100%;
@@ -36,6 +36,7 @@
   </style>
 </head>
 <body>
+  <h1>Colored Grid</h1>
   <div class="board">
     <div class="row">
       <div id="1" class="cell"></div>
